# notes

./: .travis.yml  README.md  notes-ae.cabal  notes.cabal  stack.yaml
src/: Main.hs
