name:                notes
version:             0.1.0.0
synopsis:            A note-taking program
description:
  A note-taking program
homepage:            http://github.com/aelve/notes
bug-reports:         http://github.com/aelve/notes/issues
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Utility
tested-with:         GHC == 7.10.3
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/notes.git

executable notes
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <5
                     , gtk3 == 0.14.*
                     , webkitgtk3 == 0.14.*
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  MultiWayIf
                     , ViewPatterns
                     , RecordWildCards
                     , TupleSections
                     , LambdaCase
                     , RankNTypes
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , TemplateHaskell
                     , DeriveFunctor
                     , DeriveTraversable
                     , DeriveGeneric
